fixed carousel on small screen

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -83,6 +83,14 @@ header {
 
 .carousel {
     .carousel-caption {
+        h3 {
+            font-size: 19px;
+        }
+
+        p {
+            font-size: 9px;
+        }
+
         .btn-carousel-explore {
             border-radius: 20px;
             padding: 6px 20px;
